--- a/src/shared_component/styles/navbar.css
+++ b/src/shared_component/styles/navbar.css
@@ -1,28 +1,27 @@
 .navbar {
-    background-color: rgba(26, 25, 105, 1);
+  background-color: rgba(26, 25, 105, 1);
 }
 
 .navbar-brand {
-    text-shadow: #FFFF 0px 0px 7px;
+  text-shadow: #ffff 0px 0px 7px;
 }
 
-.btn_off {
-    margin-right: 10px;
-    background-color: #FF0000;
-    border-radius: 100%;
+.off {
+  margin-top: 5px;  
+  margin-right: 20px;
+  color: #FFFF;
+  font-size: 20px;
 }
-.btn_off:hover {
-    background-color: rgba(255,69,0,0.9);
+.off:hover {
+  color: rgba(240, 255, 255, 0.9);
 }
-
 
 .name_user {
-    margin-right: 20px;
-    color: #FFFF;
-    height: 28px;
-    width: 127px;
-    padding-left: 5px;
-    border-radius: 10px;
-    text-shadow: #FFFF 0px 0px 2px;
-
+  margin-right: 20px;
+  color: #ffff;
+  height: 28px;
+  width: 127px;
+  padding-left: 15px;
+  border-radius: 10px;
+  text-shadow: #ffff 0px 0px 2px;
 }
