--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -5,11 +5,11 @@
     font-family: sans-serif;
 }
 body {
-    background: rgb(255, 255, 255)
+    background: white;
 }
 
 .container-form {
-background-color: rgba(234, 235, 236, 0.329);
+background-color: white;
 width: 250px;
 height: 320px;
 padding: 10px;
@@ -18,6 +18,8 @@ text-align: center;
 margin-top: 100px;
 display: flex;
 margin-left: 500px;
+border-radius: 1rem;
+border: solid thin rgb(11,31,71,1);
 }
 
 .create-account {
