--- a/src/shared_component/styles/home_user.css
+++ b/src/shared_component/styles/home_user.css
@@ -1,8 +1,9 @@
 h1 {
-    text-align: center;
-    margin-top: 10px;
+  text-align: center;
+  margin-top: 10px;
 }
 
-.articles {
-    
+h3 {
+  margin-top: 50px;  
+  margin-left: 15px;
 }
