--- a/src/shared_component/styles/home_user.css
+++ b/src/shared_component/styles/home_user.css
@@ -3,7 +3,19 @@ h1 {
   margin-top: 10px;
 }
 
+.title_icon {
+  display:flex;
+  justify-content:end;
+  align-items: center;
+  margin-right: 20px;
+}
+
 h3 {
-  margin: 40px 0px 10px 15px;
-  width: 200px;
+  margin: 0px 15px 5px 0px;
+  width: 115px;
+  
+}
+
+.img {
+  background-size: auto;
 }
