--- a/src/shared_component/styles/navbar.css
+++ b/src/shared_component/styles/navbar.css
@@ -7,9 +7,9 @@
 }
 
 .off {
-  margin-top: 5px;  
+  margin-top: 5px;
   margin-right: 20px;
-  color: #FFFF;
+  color: #ffff;
   font-size: 20px;
 }
 .off:hover {
