--- a/src/user/styles/home_user.css
+++ b/src/user/styles/home_user.css
@@ -4,8 +4,8 @@ h1 {
 }
 
 .title_icon {
-  display:flex;
-  justify-content:end;
+  display: flex;
+  justify-content: end;
   align-items: center;
   margin-right: 20px;
   margin-top: 35px;
@@ -14,9 +14,29 @@ h1 {
 h3 {
   margin: 0px 15px 5px 0px;
   width: 115px;
-  
 }
 
 .img {
   background-size: auto;
+}
+
+.salesForm {
+  display: flex;
+  justify-content: center;
+}
+
+.buttonSales {
+  display: flex;
+  justify-content: center;
+}
+
+.buttonAdd {
+  display: flex;
+  justify-content: center;
+}
+
+.AddForm {
+  display: flex;
+  justify-content: center;
+  width: 500px;
 }
