--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -1,10 +1,6 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-body {
+.backgroundregister {
+    min-height: 100%;
+    min-width: 100%;
     background: white;
     background-image: url("../asset/post-it.jpg");
     background-size: cover;
@@ -18,8 +14,8 @@ body {
 }
 
 .account {
-    padding-top: 25px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 0px;
 }
 
 .registrarse {
