--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -3,8 +3,8 @@
 }
 
 .backgroundlogin {
-    background: white;
-    background-image: url("../asset/post-it.jpg");
+    background: blue;
+   /*  background-image: url("../asset/post-it.jpg"); */
     background-size: cover;
 }
 
@@ -12,7 +12,7 @@
     justify-content: center;
     text-align: center;
     display: flex;
-    margin-top: 100px;
+
 }
 
 .account {
