--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -17,14 +17,15 @@
 }
 
 .account {
-    padding-top: 25px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .iniciarsesión {
     justify-content: center;
     text-align: center;
-    margin-left: 70px;
+    margin-left: 80px;
+    padding-left: 80px;
     margin-top: 15px;
     cursor: pointer;
 }
