--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -22,12 +22,9 @@
 }
 
 .iniciarsesión {
-    justify-content: center;
-    text-align: center;
-    margin-left: 80px;
-    padding-left: 80px;
-    margin-top: 15px;
-    cursor: pointer;
+    margin:0 auto;
+    display:block;
+    float: right;
 }
 
 .registrarse {
